--- a/app/views/dealerships/index.html.erb
+++ b/app/views/dealerships/index.html.erb
@@ -24,4 +24,6 @@
 
 <br>
 
-<%= link_to 'New Dealership', new_dealership_path %>
+<% if current_user&.is_admin? %>
+  <%= link_to 'New Dealership', new_dealership_path %>
+<% end %>
