--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= form.label :price %>
-    <%= form.number_field :price, value: number_to_currency(car.price)%>
+    <%= form.number_field :price%>
   </div>
   <div class="field">
     <%= form.label :dealership_id %>
