--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -23,9 +23,15 @@
         <td><%= number_to_currency car.price %></td>
         <td><%= link_to car.dealership.name, dealership_path(car.dealership) %></td>
         <td><%= link_to 'Show', car %></td>
-        <td><%= link_to 'Edit', edit_car_path(car) %></td>
-        <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user&.is_admin? %>
+          <td><%= link_to 'Edit', edit_car_path(car) %></td>
+          <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<% if current_user&.is_admin? %>
+  <p><%= link_to 'New Car', new_car_path %></p>
+<% end %>
