--- a/app/views/dealerships/show.html.erb
+++ b/app/views/dealerships/show.html.erb
@@ -1,10 +1,15 @@
 <h2>Dealership: <%= @dealership.name %></h2>
 <small><%= @dealership.cars.size %>  cars</small>
 <% if current_user&.is_admin? %>
-  <%= link_to 'Edit', edit_dealership_path(@dealership) %>
+  <p><%= link_to 'Edit dealership', edit_dealership_path(@dealership) %></p>
 <% end %>
 <div id="content">
-  <p><%= link_to 'New Car', new_car_path %> | <%= link_to 'Back', dealerships_path %></p>
+  <p>
+    <%= link_to 'Back', dealerships_path %>
+    <% if current_user&.is_admin? %>
+      | <%= link_to 'New Car', new_car_path %>
+    <% end %>
+  </p>
 
   <table>
     <thead>
@@ -27,8 +32,10 @@
           <td><%= car.is_new %></td>
           <td><%= number_to_currency car.price %></td>
           <td><%= link_to 'Show', car %></td>
-          <td><%= link_to 'Edit', edit_car_path(car) %></td>
-          <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if current_user&.is_admin? %>
+            <td><%= link_to 'Edit', edit_car_path(car) %></td>
+            <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
@@ -36,5 +43,10 @@
 
   <br>
 
-  <p><%= link_to 'New Car', new_car_path %> | <%= link_to 'Back', dealerships_path %></p>
+  <p>
+    <%= link_to 'Back', dealerships_path %>
+    <% if current_user&.is_admin? %>
+      | <%= link_to 'New Car', new_car_path %>
+    <% end %>
+  </p>
 </div>
